# sprt

./: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: codeql.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  lib.rs  main.rs
src-tauri/src/sprt/: auth.rs  mod.rs
src-tauri/src/stremio/: api.rs  auth.rs
src-tauri/src/stremio/api/: addon.rs  api_types.rs  mod.rs  user.rs
src/components/: Button.tsx  Hover.tsx  Input.tsx  NavBar.tsx  TopBar.tsx
src/context/: AuthContext.tsx  LogContext.tsx
src/screens/: Login.tsx  Main.tsx  Output.tsx
